--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.android.support:support-v4:21.0.0'
-    compile 'com.android.support:recyclerview-v7:21.0.0'
-    compile 'com.android.support:cardview-v7:21.+'
-    compile 'com.android.support:support-v13:21.0.0'
-    compile 'com.github.gabrielemariotti.cards:cardslib-core:2.1.0'
     compile files('src/main/java/lib/javatuples-1.2.jar')
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.android.support:support-v13:21.0.3'
+    compile 'com.github.gabrielemariotti.cards:cardslib-core:2.1.0'
 }
