--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.android.support:support-v13:21.0.3'
     compile 'com.github.gabrielemariotti.cards:cardslib-core:2.1.0'
+    compile 'com.google.code.gson:gson:2.6.2'
 }
